5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/2636/executions/1716_2508.log
== TEST (2019-05-16 00:56:18) 
-- CODE:
n = int(input())
formula = 3
cont = 2
i = 0
if(n==1):
	print(round(formula,8))
else:
	while (1):
		cont = cont * cont+1 *cont+2
		formula +=  4/cont
		break
	print(round(formula,8))
		
	
	 
	
-- OUTPUT:
3.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:56:58) 
-- CODE:
n = int(input())
formula = 3
cont = 2
i = 0
if(n==1):
	print(round(formula,8))
else:
	while (1):
		cont = cont * (cont+1) *(cont+2)
		formula +=  4/cont
		break
	print(round(formula,8))
		
	
	 
	
-- OUTPUT:
3.16666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 01:04:14) 
-- CODE:
n = int(input())
formula = 3
cont = 2
denominador = 0
i = 1
if(n==1):
	print(round(formula,8))
else:
	while (1):
		if(i==n):
			break
		if(i % 2 !=0):
			denominador = -(cont * (cont+1) *(cont+2))
		else:
			denominador = -(cont * (cont+1) *(cont+2))
		formula += 4/denominador
		cont += 2
		i = i+1
	print(round(formula,8))
		
	
	 
	
-- OUTPUT:
2.78253968
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 01:06:21) 
-- CODE:
n = int(input())
formula = 3
cont = 2
denominador = 0
i = 1
if(n==1):
	print(round(formula,8))
else:
	while (1):
		if(i==n):
			break
		if(i % 2 !=0):
			denominador = -(cont * (cont+1) *(cont+2))
		else:
			denominador = cont * (cont+1) *(cont+2)
		formula += 4/denominador
		cont += 2
		i = i+1
	print(round(formula,8))
		
	
	 
	
-- OUTPUT:
2.86031746
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 01:06:34) 
-- CODE:
n = int(input())
formula = 3
cont = 2
denominador = 0
i = 2
if(n==1):
	print(round(formula,8))
else:
	while (1):
		if(i==n):
			break
		if(i % 2 !=0):
			denominador = -(cont * (cont+1) *(cont+2))
		else:
			denominador = cont * (cont+1) *(cont+2)
		formula += 4/denominador
		cont += 2
		i = i+1
	print(round(formula,8))
		
	
	 
	
-- OUTPUT:
3.1452381
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 01:06:46) 
-- CODE:
n = int(input())
formula = 3
cont = 2
denominador = 0
i = 1
if(n==1):
	print(round(formula,8))
else:
	while (1):
		if(i==n):
			break
		if(i % 2 !=0):
			denominador = -(cont * (cont+1) *(cont+2))
		else:
			denominador = cont * (cont+1) *(cont+2)
		formula += 4/denominador
		cont += 2
		i = i+1
	print(round(formula,8))
		
	
	 
	
-- OUTPUT:
2.86031746
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 01:06:54) 
-- CODE:
n = int(input())
formula = 3
cont = 2
denominador = 0
i = 2
if(n==1):
	print(round(formula,8))
else:
	while (1):
		if(i==n):
			break
		if(i % 2 !=0):
			denominador = -(cont * (cont+1) *(cont+2))
		else:
			denominador = cont * (cont+1) *(cont+2)
		formula += 4/denominador
		cont += 2
		i = i+1
	print(round(formula,8))
		
	
	 
	
-- OUTPUT:
3.1452381
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 01:07:12) 
-- CODE:
n = int(input())
formula = 3
cont = 2
denominador = 0
i = 1
if(n==1):
	print(round(formula,8))
else:
	while (1):
		if(i==n):
			break
		if(i % 2 !=0 and i>1):
			denominador = -(cont * (cont+1) *(cont+2))
		else:
			denominador = cont * (cont+1) *(cont+2)
		formula += 4/denominador
		cont += 2
		i = i+1
	print(round(formula,8))
		
	
	 
	
-- OUTPUT:
3.19365079
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 01:07:17) 
-- CODE:
n = int(input())
formula = 3
cont = 2
denominador = 0
i = 1
if(n==1):
	print(round(formula,8))
else:
	while (1):
		if(i==n):
			break
		if(i % 2 !=0 and i>1):
			denominador = -(cont * (cont+1) *(cont+2))
		else:
			denominador = cont * (cont+1) *(cont+2)
		formula += 4/denominador
		cont += 2
		i = i+1
	print(round(formula,8))
		
	
	 
	
-- OUTPUT:
3.19365079
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 01:07:31) 
-- CODE:
n = int(input())
formula = 3
cont = 2
denominador = 0
i = 1
if(n==1):
	print(round(formula,8))
else:
	while (1):
		if(i==n):
			break
		if(i % 2 !=0 and i>1):
			denominador = -(cont * (cont+1) *(cont+2))
		else:
			denominador = cont * (cont+1) *(cont+2)
		formula += 4/denominador
		cont += 2
		i = i+1
	print(round(formula,8))
		
	
	 
	
-- OUTPUT:
3.19365079
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 01:09:43) 
-- CODE:
n = int(input())
formula = 3
cont = 2
denominador = 0
i = 1
if(n==1):
	print(round(formula,8))
else:
	while (1):
		if(i==n):
			break
		if(i % 2 !=0 and i>1):
			denominador = (cont * (cont+1) *(cont+2))
			formula -= 4/denominador
		else:
			denominador = cont * (cont+1) *(cont+2)
			formula += 4/denominador
		cont += 2
		i = i+1
	print(round(formula,8))
		
	
	 
	
-- OUTPUT:
3.19365079
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 01:09:51) 
-- CODE:
n = int(input())
formula = 3
cont = 2
denominador = 0
i = 1
if(n==1):
	print(round(formula,8))
else:
	while (1):
		if(i==n):
			break
		if(i % 2 !=0 and i>1):
			denominador = (cont * (cont+1) *(cont+2))
			formula -= 4/denominador
		else:
			denominador = cont * (cont+1) *(cont+2)
			formula += 4/denominador
		cont += 2
		i = i+1
	print(round(formula,8))
		
	
	 
	
-- OUTPUT:
3.19365079
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 01:13:26) 
-- CODE:
n = int(input())
formula = 3
cont = 2
denominador = 0
i = 1
if(n==1):
	print(round(formula,8))
else:
	while (1):
		if(i==n):
			break
		if(i % 2 !=0 and i>1):
			denominador = (cont * (cont+1) *(cont+2))
			formula -= 4/denominador
		else:
			denominador = cont * (cont+1) *(cont+2)
			formula += 4/denominador
		cont += 2
		i = i+1
	print(round(formula,8))
		
	
	 
	
-- OUTPUT:
3.19365079
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 01:13:59) 
-- CODE:
n = int(input())
formula = 3
cont = 2
denominador = 0
i = 1
if(n==1):
	print(round(formula,8))
else:
	while (1):
		if(i==n):
			break
		if(i % 2 !=0 and i>1):
			denominador = (cont * (cont+1) *(cont+2))
			print(demoninador)
		else:
			denominador = cont * (cont+1) *(cont+2)
			formula += 4/denominador
		cont += 2
		i = i+1
	#print(round(formula,8))
		
	
	 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(demoninador)
NameError: name 'demoninador' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 01:14:51) 
-- CODE:
n = int(input())
formula = 3
cont = 2
denominador = 0
i = 2
if(n==1):
	print(round(formula,8))
else:
	while (1):
		if(i==n+1):
			break
		if(i % 2 !=0 and i>1):
			denominador = (cont * (cont+1) *(cont+2))
			print(demoninador)
		else:
			denominador = cont * (cont+1) *(cont+2)
			formula += 4/denominador
		cont += 2
		i = i+1
	#print(round(formula,8))
		
	
	 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(demoninador)
NameError: name 'demoninador' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 01:15:04) 
-- CODE:
n = int(input())
formula = 3
cont = 2
denominador = 0
i = 2
if(n==1):
	print(round(formula,8))
else:
	while (1):
		if(i==n+1):
			break
		if(i % 2 !=0 and i>1):
			denominador = (cont * (cont+1) *(cont+2))
			print(denominador)
		else:
			denominador = cont * (cont+1) *(cont+2)
			formula += 4/denominador
		cont += 2
		i = i+1
	#print(round(formula,8))
		
	
	 
	
-- OUTPUT:
120
720
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 01:15:26) 
-- CODE:
n = int(input())
formula = 3
cont = 2
denominador = 0
i = 2
if(n==1):
	print(round(formula,8))
else:
	while (1):
		if(i==n+1):
			break
		if(i % 2 !=0 and i>1):
			denominador = (cont * (cont+1) *(cont+2))
			formula -= 4/denominador
			#print(denominador)
		else:
			denominador = cont * (cont+1) *(cont+2)
			formula += 4/denominador
		cont += 2
		i = i+1
	#print(round(formula,8))
		
	
	 
	
-- OUTPUT:
120
720
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 01:16:45) 
-- CODE:
n = int(input())
formula = 3
cont = 2
denominador = 0
i = 2
if(n==1):
	print(round(formula,8))
else:
	while (1):
		if(i==n+1):
			break
		if(i % 2 !=0 and i>1):
			denominador = (cont * (cont+1) *(cont+2))
			formula -= 4/denominador
			#print(denominador)
		else:
			denominador = cont * (cont+1) *(cont+2)
			formula += 4/denominador
		cont += 2
		i = i+1
	print(round(formula,8))
		
	
	 
	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 01:17:12) 
-- CODE:
n = int(input())
formula = 3
cont = 2
denominador = 0
i = 2
if(n==1):
	print(round(formula,8))
else:
	while (1):
		if(i==n+1):
			break
		if(i % 2 !=0 and i>1):
			denominador = (cont * (cont+1) *(cont+2))
			formula -= 4/denominador
			print(denominador)
		else:
			denominador = cont * (cont+1) *(cont+2)
			formula += 4/denominador
		cont += 2
		i = i+1
	print(round(formula,8))
		
	
	 
	
-- OUTPUT:
120
720
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 01:17:26) 
-- CODE:
n = int(input())
formula = 3
cont = 2
denominador = 0
i = 2
if(n==1):
	print(round(formula,8))
else:
	while (1):
		if(i==n+1):
			break
		if(i % 2 !=0 and i>1):
			denominador = (cont * (cont+1) *(cont+2))
			formula -= 4/denominador
			#print(denominador)
		else:
			denominador = cont * (cont+1) *(cont+2)
			formula += 4/denominador
		cont += 2
		i = i+1
	print(round(formula,8))
		
	
	 
	
-- EXECUTION TIME:
0.24087
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 01:18:58) 
-- CODE:
n = int(input())
formula = 3
cont = 2
denominador = 0
i = 2
if(n==1):
	print(round(formula,8))
else:
	while (1):
		if(i==n+1):
			break
		denominador = cont * (cont+1) *(cont+2)
		if(i % 2 !=0 and i>1):
			formula -= 4/denominador
		else:
			formula += 4/denominador
		cont += 2
		i = i+1
	print(round(formula,8))
-- EXECUTION TIME:
0.148505
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
